Fix: Prevent viewsCell to wrap to next line

--- a/prosjekt2/frontend/src/components/AllSongsComponents/AllSongsList.css
+++ b/prosjekt2/frontend/src/components/AllSongsComponents/AllSongsList.css
@@ -31,6 +31,7 @@
 
 .viewsCell {
 	font-size: small;
+	white-space: nowrap;
 }
 
 td {
